hw1/otusapp/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-app
  namespace: otus
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
      - host: arch.homework
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: otus-app
                  port:
                    number: 8000
